--- a/package.json
+++ b/package.json
@@ -2,10 +2,23 @@
   "name": "simpledev",
   "version": "1.0.0",
   "description": "Tool for frontend development",
-  "main": "index.js",
+  "main": "simple-dev.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MuhammadAliKhan/simpleDev.git"
+  },
+  "keywords": [
+    "frontend",
+    "javascript",
+    "util"
+  ],
   "author": "Muhammad Ali Khan",
-  "license": "ISC"
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/MuhammadAliKhan/simpleDev/issues"
+  },
+  "homepage": "https://github.com/MuhammadAliKhan/simpleDev#readme"
 }
