--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "util"
   ],
   "author": "Muhammad Ali Khan",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/MuhammadAliKhan/simpleDev/issues"
   },
